@@ -50,7 +50,7 @@
   "package_extra_name": " (cpu)",
   "process_script": "install", 
   "soft_uoa": "fc544df6941a5491", 
-  "suggested_path": "lib-armcl-cpu-17.09", 
+  "suggested_path": "lib-armcl-cpu", 
   "tags": [
     "lib", 
     "arm", 
