@@ -6,9 +6,9 @@
       "PACKAGE_AUTOGEN": "NO", 
       "PACKAGE_GIT": "YES", 
       "PACKAGE_SKIP_LINUX_MAKE": "YES", 
+      "PACKAGE_GIT_CHECKOUT": "v17.10", 
       "PACKAGE_SUB_DIR": "src", 
       "PACKAGE_SUB_DIR1": "src", 
-      "PACKAGE_GIT_CHECKOUT": "v17.09",
       "PACKAGE_URL": "https://github.com/ARM-software/ComputeLibrary", 
       "USE_ARM64_V82A": "OFF", 
       "USE_BARE_METAL": "OFF", 
@@ -16,12 +16,12 @@
       "USE_CPPTHREADS": "ON", 
       "USE_EMBEDDED_KERNELS": "OFF", 
       "USE_NEON": "OFF", 
-      "USE_OPENCL": "ON", 
+      "USE_OPENCL": "OFF", 
       "USE_OPENMP": "OFF", 
       "USE_VALIDATION_TEST": "OFF"
     }, 
     "use_git_revision": "yes", 
-    "version": "17.09"
+    "version": "17.10"
   }, 
   "deps": {
     "compiler": {
@@ -29,15 +29,6 @@
       "name": "C++ compiler", 
       "sort": 10, 
       "tags": "compiler,lang-cpp"
-    }, 
-    "opencl": {
-      "local": "yes", 
-      "name": "OpenCL library", 
-      "skip_installed": {
-        "android": "yes"
-      }, 
-      "sort": 20, 
-      "tags": "lib,opencl"
     }
   }, 
   "end_full_path": {
@@ -56,19 +47,18 @@
     "linux", 
     "android"
   ], 
-  "package_extra_name": " (opencl)",
+  "package_extra_name": " (cpu)", 
   "process_script": "install", 
   "soft_uoa": "fc544df6941a5491", 
-  "suggested_path": "lib-armcl-opencl", 
+  "suggested_path": "lib-armcl-cpu", 
   "tags": [
     "lib", 
     "arm", 
-    "arm", 
     "armcl", 
-    "arm-compute-library",
-    "vopencl", 
+    "arm-compute-library", 
+    "vcpu", 
     "vdefault", 
-    "v17.09", 
+    "v17.10", 
     "v17",
     "channel-stable"
   ], 
